# CS791v-GPU

./: Makefile  README.md  makefile
PA0/: CMakeLists.txt  README.md  makefile
PA1/: README.md
PA1test/src/: arraypop.cu
include/: add.h
src/: add.cu  hellocuda.cu
